--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,14 @@
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 .main li {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
   font-size: 25px;
   line-height: 1.5em;
   list-style: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  /* background-color: rgb(219, 212, 212); */
+  box-shadow: 10px 10px 3px rgb(204, 192, 192);
 }
